--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     
     <h1>holaaaa</h1>
+    <button onclick="saludo()">Mensaje</button>
+    <script src="./asset/js/script.js"></script>
 </body>
 </html>
